Remove minimum_overbidding_price from auction model
